--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <header>
+        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564"></image>
         <div class="main header">
             <div class="logo">
-                <h3>Great Cliff's logo</h3>
+                <image src="images/logo.png" alt="Great Cliffs Logo" width="125"></image>
             </div>
         <nav class="main-menu">
             <ul>
