--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Great Cliffs of California</title>
+    <!--Link to Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Style method Embeded-->
     <style>
        
@@ -48,10 +50,25 @@
         section #partners .partner img{width:90px;height:90px;}
     /*footer*/
     footer{width:100%;height:155px; padding-bottom:lem; background-color:#ecfab8;}
+
     footer #nondisclaimer .copy{padding:3.5em 3.5em 3.5em 13em; float:left; font-size:0.9em;}
     footer #nondisclaimer .social{padding: 2.5em; margin-right:9.25em; float:right;}
     footer #disclaimer{clear:both;}
     footer #disclaimer p{font-size: 0.85em; text-align:center;}
+    footer #nondisclaimer .social .fa{
+        padding:15px;
+        font-size:15px;
+        width:15px;
+        text-align:center;
+        text-decoration:none;
+        margin:0 4px;
+        border-radius:50%;
+    }
+    footer #nondisclaimer .social .fa:hover{opacity:0.7;}
+    footer #nondisclaimer .social .fa-facebook{background:#3b5998;color:white;}
+    footer #nondisclaimer .social .fa-twitter{background:#55ACEE; color:white;}
+    footer #nondisclaimer .social .fa-instagram{background:#125688;color:white;} 
+
     </style>
 
 </head>
@@ -98,9 +115,9 @@
             <p> &copy Copyright 2020 - GreatCliffs.com</p>
             </div>
             <div class="social">
-                <h3>Facebook Image</h3>
-                <h3>Instagram Image</h3>
-                <h3>Twitter Image</h3>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-twitter"></a>
             <div>
         </div>
         <div class="disclaimer">
