--- a/index.html
+++ b/index.html
@@ -46,16 +46,17 @@
     </main>
     <footer>
         <div id="nondisclaimer">
+            <div class="copy">
+                <p> &copy Copyright 2020 - GreatCliffs.com</p>
+            </div>
             <div class="social">
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-instagram"></a>
                 <a href="#" class="fa fa-twitter"></a>
             </div>
-            <div class="copy">
-                    <p> &copy Copyright 2020 - GreatCliffs.com</p>
-             </div>
+            
         </div>
-        <div class="disclaimer">
+        <div id="disclaimer">
             <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
         </div>
     </footer>
