--- a/actvities.html
+++ b/actvities.html
@@ -100,7 +100,7 @@
                 <p> &copy Copyright 2020 - GreatCliffs.com</p>
             </div>
         </div>
-        <div class="disclaimer">
+        <div id="disclaimer">
             <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
         </div>
     </footer>
