--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         </nav>
         </div>
     </header>
+    <section id="timeofday">
+            <span>Your Current Local Time:</span>
+            <span id="clock"></span>
+    </section>
     <main>
         
         <h1>Introducing California's Greatest Cliffs</h1>
@@ -60,6 +64,37 @@
             <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
         </div>
     </footer>
+    <!--Javascript Codes-->
+    <script>
+        function currentTime(){
+            var d = new Date();
+            var hr=d.getHours();
+            var min=d.getMinutes();
+            var sec=d.getSeconds();
+            var ampm;
+
+            if (sec<10){
+                sec="0"+sec;
+            }
+            if(min<10){
+                min="0"+min;
+            }
+            //determin am or pm string
+            if(hr==12){
+                ampm="PM"
+            } else if(hr>12){
+                hr-=12;
+                ampm="PM";
+            } else {
+                ampm="AM";
+            }
+            var time = hr+":"+min+":"+sec+" "+ampm;
+            document.getElementById("clock").innerText=time;
+        }
+            currentTime();
+            //Run time data function every 1 second
+            setInterval(currentTime,1000);
+    </script>
 </body>
 </container>
 </html>
