Added partner images in JS

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <section>
             
             <ul id="partners">
-                <li class="partner"><img src="images/partner-bustour.png" alt="partner bus tours"></li>
+                <!--<li class="partner"><img src="images/partner-bustour.png" alt="partner bus tours"></li>
                 <li class="partner"><img src="images/partner-cabinrental.png" alt="partner cabin rental"></li>
                 <li class="partner"><img src="images/partner-campingadv.png" alt="partner vamping adventure"></li>
                 <li class="partner"><img src="images/partner-collegetours.png" alt="partner college tours"></li>
                 <li class="partner"><img src="images/partner-rentalbike.png" alt="partner bike rentals"></li>
-                <li class="partner"><img src="images/partner-tourgroup.png" alt="partner tour group"></li>
+                <li class="partner"><img src="images/partner-tourgroup.png" alt="partner tour group"></li>-->
             </ul>
         </section>
     </main>
@@ -66,6 +66,7 @@
     </footer>
     <!--Javascript Codes-->
     <script>
+        //Day1-Add Timeclock//
         function currentTime(){
             var d = new Date();
             var hr=d.getHours();
@@ -94,6 +95,24 @@
             currentTime();
             //Run time data function every 1 second
             setInterval(currentTime,1000);
+
+            //Day2-Add Partners' six images//
+            var photos =[]; //declare an empty array to store iamge 
+            var fileNames=[];//declare an empty element to store image file names
+            var imageList =[];//declare an empty array to store html list that contain an image
+           var image;//declare an empty variable to store the assembled image list codes
+           var openList="<li class='partner'>";//declare a var to contain open list tag
+           var closeList="</li>"//declare a var to contain close list tag
+
+            //create a loop to create 6 images strating with index of 0
+           for (var i=0;i<6;i++){
+           fileNames.push("partner"+(i+1));
+           photos.push('<img src="images/'+fileNames[i]+'.png">'); //assemble file name into image element and store in an array
+           image = openList+photos[i]+closeList;
+           imageList.push(image);
+            }
+            //display all six image codes stored in the array
+            document.getElementById("partners").innerHTML=imageList.join(" ");
     </script>
 </body>
 </container>
