fixed the bug and uploaded the cliffs page

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <nav class="main-menu">
             <ul>
                 <li><a href=index.html>Home</a></li>
-                <li>Cliffs</li>
+                <li><a href=cliffs.html>Cliffs</a></li>
                 <li><a href=actvities.html>Activities</a></li>
                 <li class="active"><a href=contact.html>Contact</a></li>
             </ul>
