--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="main-menu">
             <ul>
                 <li class="active"><a href=index.html>Home</a></li>
-                <li>Cliffs</li>
+                <li><a href=cliffs.html>Cliffs</a></li>
                 <li><a href=actvities.html>Activities</a></li>
                 <li><a href=contact.html>Contact</a></li>
             </ul>
