added js files for contact page

--- a/cliffs.html
+++ b/cliffs.html
@@ -49,12 +49,12 @@
         </ul>
         <section>
             <ul id="partners">
-               <li class="partner"><img src="images/partner1.png" alt="partner bus tours"></li>
+               <!--<li class="partner"><img src="images/partner1.png" alt="partner bus tours"></li>
                 <li class="partner"><img src="images/partner2.png" alt="partner cabin rental"></li>
                 <li class="partner"><img src="images/partner3.png" alt="partner vamping adventure"></li>
                 <li class="partner"><img src="images/partner4.png" alt="partner college tours"></li>
                 <li class="partner"><img src="images/partner5.png" alt="partner bike rentals"></li>
-                <li class="partner"><img src="images/partner6.png" alt="partner tour group"></li>
+                <li class="partner"><img src="images/partner6.png" alt="partner tour group"></li>-->
             </ul>
         </section>
     </main>
@@ -74,6 +74,9 @@
             <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
         </div>
     </footer>
+    <script src="js/site_scripts.js">
+   
+    </script>
 </body>
 </container>
 </html>
