--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="contact">
+<body id="contact" onLoad="disableButton(true)">
     <header>
         <div class="mainheader">
             <div class="logo">
@@ -107,7 +107,7 @@
         </div>
     </footer>
     <script src="js/site_scripts.js">   
-    
+
     </script>
     <script src="js/randomcodes.js">
 
