--- a/actvities.html
+++ b/actvities.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<container>
+
 <head>
     <meta charset="UTF-8">
     <title>Great Cliffs of California</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!--Load the JQuery-->
 </head>
 <body id="activities">
     <header>
         <div class="mainheader">
             <div class="logo">
-                <image src="images/logo.png" alt="Great Cliffs Logo" width="125"></image>
+                <img src="images/logo.png" alt="Great Cliffs Logo" width="125">
             </div>
         <nav class="main-menu">
             <ul>
@@ -104,9 +105,8 @@
             <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
         </div>
     </footer>
-    <script src="js/site_scripts.js">
-   
-    </script>
+    <script src="js/site_scripts.js"> </script>
+    <script src="js/activity.js"> </script>
 </body>
-</container>
+
 </html>
