--- a/cliffs.html
+++ b/cliffs.html
@@ -6,6 +6,8 @@
     <title>Great Cliffs of California</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
 </head>
 <body id="cliffs">
     <header>
@@ -47,16 +49,17 @@
                 <div class="cliffphoto-title">South Cliff</div>
             </li>
         </ul>
-        <section>
-            <ul id="partners">
+
+        <!--<section>-->
+            <!--<ul id="partners">-->
                <!--<li class="partner"><img src="images/partner1.png" alt="partner bus tours"></li>
                 <li class="partner"><img src="images/partner2.png" alt="partner cabin rental"></li>
                 <li class="partner"><img src="images/partner3.png" alt="partner vamping adventure"></li>
                 <li class="partner"><img src="images/partner4.png" alt="partner college tours"></li>
                 <li class="partner"><img src="images/partner5.png" alt="partner bike rentals"></li>
                 <li class="partner"><img src="images/partner6.png" alt="partner tour group"></li>-->
-            </ul>
-        </section>
+            <!--</ul>
+        </section>-->
     </main>
     <footer>
         <div id="nondisclaimer">
