--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 
                     <!--Random Codes-->
                     <div class="randomcode">
-                        <input id="codeentered" type="text" name="randomcode" placeholder="Enter characters">
+                        <input type="text" name="randomcode" placeholder="Enter characters">
                         <p id="codes"></p>
                     </div>
 
