--- a/cliffs.html
+++ b/cliffs.html
@@ -49,7 +49,11 @@
                 <div class="cliffphoto-title">South Cliff</div>
             </li>
         </ul>
+        <div class="backdrop"></div>
 
+        <div class="box">
+        <div class="close">x</div>
+        </div>
         <!--<section>-->
             <!--<ul id="partners">-->
                <!--<li class="partner"><img src="images/partner1.png" alt="partner bus tours"></li>
