--- a/index2.html
+++ b/index2.html
@@ -20,11 +20,11 @@
     <div id="container">
         <header>
             <div class="main-header container">
-                <div class="row align-items-center">
-                    <div class="col-8 col-md-3 logo">
+                <div class="row">
+                    <div class="col-4 col-md-3 logo">
                         <img src="images/logo.png" alt="Great Cliffs Logo" class="img-fluid">
                     </div>
-                    <nav class="col-4 col-md-9 main-menu">
+                    <nav class="navbar navbar-expand-lg col-8 col-md-9 main-menu">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
