--- a/activities.html
+++ b/activities.html
@@ -6,10 +6,10 @@
     <title>Great Cliffs of California</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="stylecliffs.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="styleactivities.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body id="cliffs">
+<body id="activities">
     <div class="main-header container sticky-top">
         <div class="row align-items-center">
             <div class="col-8 col-md-3 logo">
@@ -22,8 +22,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="index2.html">Home</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="cliffs.html">Cliffs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="activities.html">Activities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cliffs.html">Cliffs</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="activities.html">Activities</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -33,56 +33,96 @@
     <header>
     </header>
     <main class="container">
-        <h1>California's Greatest Cliffs</h1>
-        <p class="contenttext">The greatest cliffs are these four cliffs located in southern California. Each of these cliffs have their own uniqueness and beauty: West Cliff, North Cliff, East Cliff and South Cliff are the pride of California. Each cliff has many amenities to offer visitors such as recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
-        <p class="contenttext">No matter which direction you head from Irvine, California, the sites are easily reached within a 100 mile radius. West Cliff is the most popular among Westcliff University campus students because of its close proximity.</p>
-        <ul id="cliffphotos" class="row">
-            <li class="col-12 col-md-6 col-lg-3 cliffphoto">
-                <img src="images/cliff-west-sea.jpg" alt="westcliff" class="img-fluid">
-                <div class="cliffphoto-title">West Cliff</div>
-            </li>
-            <li class="col-12 col-md-6 col-lg-3 cliffphoto">
-                <img src="images/cliff-north-mountain.jpg" alt="northcliff" class="img-fluid">
-                <div class="cliffphoto-title">North Cliff</div>
-            </li>
-            <li class="col-12 col-md-6 col-lg-3 cliffphoto">
-                <img src="images/cliff-east-river.jpg" alt="eastcliff" class="img-fluid">
-                <div class="cliffphoto-title">East Cliff</div>
-            </li>
-            <li class="col-12 col-md-6 col-lg-3 cliffphoto">
-                <img src="images/cliff-south-canyon.jpg" alt="southcliff" class="img-fluid">
-                <div class="cliffphoto-title">South Cliff</div>
-            </li>
-        </ul>
+        <h1>Activities</h1>
+        <p class="contenttext">There are many planned activities at all the cliff sites. Some are scheduled daily, weekly, monthly and yearly. These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department. Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
+        <!--Table below-->
+        <table class="table">
+            <caption>Activities at the Cliffs</caption>
+            <thead>
+                <tr>
+                    <th>Activity</th>
+                    <th>West Cliff</th>
+                    <th>North Cliff</th>
+                    <th>East Cliff</th>
+                    <th>South Cliff</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Hiking</td>
+                    <td>College Hikes</td>
+                    <td>Family Fun</td>
+                    <td>Treasure Trails</td>
+                    <td>Canyon Explorer</td>
+                </tr>
+                <tr>
+                    <td>Kayak</td>
+                    <td>Western Kayak Meetup</td>
+                    <td>Not Available</td>
+                    <td>Youth Kayaking</td>
+                    <td>Kayak Down</td>
+                </tr>
+                <tr>
+                    <td>Skydiving</td>
+                    <td>Seacliff Diving</td>
+                    <td>Sky is the limit</td>
+                    <td>Not Available</td>
+                    <td>Sky Diving for Beginners</td>
+                </tr>
+                <tr>
+                    <td>Biking</td>
+                    <td>Bicycle for One</td>
+                    <td>Not Available</td>
+                    <td>Bike Meetup Group</td>
+                    <td>Not Available</td>
+                </tr>
+                <tr>
+                    <td>Camping</td>
+                    <td>Youth Camp</td>
+                    <td>Rent a Tent</td>
+                    <td>Campground Adventure</td>
+                    <td>Sunset Camping</td>
+                </tr>
+            </tbody>
+        </table>
+        <div id="displaySelected">
+            <div id="result">
+                <h4>My selected activities to enquire:</h4>
+            </div>
+            <div id="sendinfo">
+                <input type="email" placeholder="johndoe@gmail.com" class="form-control">
+                <button class="btn btn-primary"><i class="fa fa-envelope"></i> Get info</button>
+            </div>
+        </div>
     </main>
     <section class="container-fluid">
         <ul id="partners" class="row">
-            <li class="partner col-6 col-md-4 col-lg-2">
+            <li class="col-6 col-md-4 col-lg-2 partner">
                 <div class="partner-img-wrapper">
                     <img src="images2/partners/partner-bustour.png" alt="Partner Bus Tours" class="img-fluid">
                 </div>
             </li>
-            <li class="partner col-6 col-md-4 col-lg-2">
+            <li class="col-6 col-md-4 col-lg-2 partner">
                 <div class="partner-img-wrapper">
                     <img src="images2/partners/partner-cabinrental.png" alt="Partner Cabin Rental" class="img-fluid">
                 </div>
             </li>
-            <li class="partner col-6 col-md-4 col-lg-2">
+            <li class="col-6 col-md-4 col-lg-2 partner">
                 <div class="partner-img-wrapper">
                     <img src="images2/partners/partner-campingadv.png" alt="Partner Camping Adventure" class="img-fluid">
                 </div>
             </li>
-            <li class="partner col-6 col-md-4 col-lg-2">
+            <li class="col-6 col-md-4 col-lg-2 partner">
                 <div class="partner-img-wrapper">
                     <img src="images2/partners/partner-collegetours.png" alt="Partner College Tours" class="img-fluid">
                 </div>
             </li>
-            <li class="partner col-6 col-md-4 col-lg-2">
+            <li class="col-6 col-md-4 col-lg-2 partner">
                 <div class="partner-img-wrapper">
                     <img src="images2/partners/partner-rentalbike.png" alt="Partner Bike Rentals" class="img-fluid">
                 </div>
             </li>
-            <li class="partner col-6 col-md-4 col-lg-2">
+            <li class="col-6 col-md-4 col-lg-2 partner">
                 <div class="partner-img-wrapper">
                     <img src="images2/partners/partner-tourgroup.png" alt="Partner Tour Group" class="img-fluid">
                 </div>
@@ -116,4 +156,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
-
