--- a/index2.html
+++ b/index2.html
@@ -18,27 +18,27 @@
 </head>
 <body id="home">
     <div id="container">
-        <header>
-            <div class="main-header container">
-                <div class="row">
-                    <div class="col-4 col-md-3 logo">
-                        <img src="images/logo.png" alt="Great Cliffs Logo" class="img-fluid">
-                    </div>
-                    <nav class="navbar navbar-expand-lg col-8 col-md-9 main-menu">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="cliffs.html">Cliffs</a></li>
-                                <li class="nav-item"><a class="nav-link" href="activities.html">Activities</a></li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            </ul>
-                        </div>
-                    </nav>
+        <div class="main-header container sticky-top">
+            <div class="row align-items-center">
+                <div class="col-8 col-md-3 logo">
+                    <img src="images/logo.png" alt="Great Cliffs Logo" class="img-fluid">
                 </div>
+                <nav class="navbar navbar-expand-lg col-md-9">
+                    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active"><a class="nav-link" href="index2.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="cliffs.html">Cliffs</a></li>
+                            <li class="nav-item"><a class="nav-link" href="activities.html">Activities</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
+        </div>
+        <header>
         </header>
 
         <main class="container">
